--- a/Content.Client/Cargo/UI/CargoPalletMenu.xaml
+++ b/Content.Client/Cargo/UI/CargoPalletMenu.xaml
@@ -1,21 +1,38 @@
 <controls:FancyWindow xmlns="https://spacestation14.io"
                       xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
-            SetSize="300 150"
-            MinSize="300 150"
+            SetSize="480 220"
+            MinSize="380 180"
                       Title="{Loc 'cargo-pallet-console-menu-title'}">
     <BoxContainer Orientation="Vertical" Margin="5">
         <BoxContainer Orientation="Horizontal">
             <Label Text="{Loc 'cargo-pallet-menu-appraisal-label'}"
                    StyleClasses="LabelKeyText" />
             <Label Name="AppraisalLabel"
-                   Text="{Loc 'cargo-pallet-menu-no-goods-text'}" />
+                   HorizontalExpand="True"
+                   Text="-" />
+        </BoxContainer>
+        <BoxContainer Orientation="Horizontal" Name="RealRow">
+            <Label Text="{Loc 'cargo-pallet-menu-real-label'}"
+                   StyleClasses="LabelKeyText" />
+            <Label Name="RealLabel"
+                   HorizontalExpand="True"
+                   Text="-" />
         </BoxContainer>
         <BoxContainer Orientation="Horizontal">
             <Label Text="{Loc 'cargo-pallet-menu-count-label'}"
                    StyleClasses="LabelKeyText" />
             <Label Name="CountLabel"
-                   Text="{Loc 'cargo-pallet-menu-no-goods-text'}" />
+                   HorizontalExpand="True"
+                   Text="-" />
         </BoxContainer>
+        <BoxContainer Orientation="Horizontal" Name="ReductionRow">
+            <Label Text="{Loc 'cargo-pallet-menu-total-reduction-label'}"
+                   StyleClasses="LabelKeyText" />
+            <Label Name="ReductionLabel"
+                   HorizontalExpand="True"
+                   Text="-" />
+        </BoxContainer>
+
         <Button Name="AppraiseButton"
                 Text="{Loc 'cargo-pallet-appraise-button'}"/>
         <Button Name="SellButton"
