Дополнительные системы которые задействую позже но их надо добавить

--- a/Content.Client/_Lua/CartridgeLoader/Cartridges/YupiTransferUiFragment.xaml
+++ b/Content.Client/_Lua/CartridgeLoader/Cartridges/YupiTransferUiFragment.xaml
@@ -13,6 +13,10 @@
     <Label Name="Balance" Text="0"/>
   </BoxContainer>
   <BoxContainer Orientation="Horizontal">
+    <Label Name="LblDueTitle" Text="Задолженность по кредиту:"/>
+    <Label Name="Due" Text="0"/>
+  </BoxContainer>
+  <BoxContainer Orientation="Horizontal">
     <Label Name="LblTargetCodeTitle" Text="Код получателя:"/>
     <LineEdit Name="CodeInput" PlaceHolder="H2U2D8" HorizontalExpand="True"/>
   </BoxContainer>
@@ -20,12 +24,15 @@
     <Label Name="LblAmountTitle" Text="Сумма:"/>
     <LineEdit Name="AmountInput" PlaceHolder="1000" HorizontalExpand="True"/>
   </BoxContainer>
-  <Button Name="SendButton" Text="Отправить" HorizontalExpand="True"/>
+  <BoxContainer Orientation="Horizontal" SeparationOverride="6">
+    <Button Name="SendButton" Text="Отправить" HorizontalExpand="True"/>
+    <Button Name="RepayButton" Text="Погасить кредит" HorizontalExpand="True"/>
+  </BoxContainer>
   <Control VerticalExpand="True"/>
   <BoxContainer Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 5 0 0">
     <TextureRect Name="BankLogo"
-                 TexturePath="/Textures/_NF/Logo/logo.png"
+                 TexturePath="/Textures/_Lua/Icon_bank/Nanotrahen_logo_invert.png"
                  Stretch="KeepAspectCentered"
-                 SetSize="320 140"/>
+                 SetSize="256 128"/>
   </BoxContainer>
 </cartridges:YupiTransferUiFragment>
